testsuite/tests/typecheck/should_fail/ExplicitSpecificity7.stderr

ExplicitSpecificity7.hs:8:12: error:
    • Cannot apply function of kind ‘Bool -> b0 -> b0’
      to visible kind argument ‘Int’
    • In the type ‘Foo @Bool @Int True 42’
      In the type declaration for ‘Bar’
